--- a/BusTerminalApp/Application/Application.csproj
+++ b/BusTerminalApp/Application/Application.csproj
@@ -11,4 +11,9 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Data\Data.csproj" />
+    </ItemGroup>
+
 </Project>
